# SPDX-FileCopyrightText: 2023 Changgyoo Park <wvwwvwwv@me.com>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "Transactional access controller"
version = "0.1.0"
authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/wvwwvwwv/transactional-access-controller"
license = "Apache-2.0"
categories = ["asynchronous", "concurrency", "database-implementations"]
keywords = ["async", "concurrent", "database"]

[dependencies]
scc = "2.1"
sdd = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_futures"] }
futures = "0.3"
proptest = "1.2"
static_assertions = "1.1"
tokio = { version = "1.2", features = ["full"] }

[[bench]]
name = "lock_table"
harness = false
